update JDK from 21 to 22