@@ -17,11 +17,11 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.build.jdk>21</project.build.jdk>
+        <project.build.jdk>22</project.build.jdk>
 
         <!-- dependencies -->
         <integrations-api.version>1.3.1</integrations-api.version>
-        <jfuse.version>0.6.3</jfuse.version>
+        <jfuse.version>0.7.0</jfuse.version>
         <slf4j.version>2.0.13</slf4j.version>
         <caffeine.version>3.1.8</caffeine.version>
 
@@ -156,9 +156,6 @@
                 <configuration>
                     <showWarnings>true</showWarnings>
                     <release>${project.build.jdk}</release>
-                    <compilerArgs>
-                        <compilerArg>--enable-preview</compilerArg>
-                    </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
@@ -194,7 +191,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.2.5</version>
                 <configuration>
-                    <argLine>@{surefire.jacoco.args} -javaagent:${net.bytebuddy:byte-buddy-agent:jar} --enable-preview --enable-native-access=org.cryptomator.jfuse.linux.amd64,org.cryptomator.jfuse.linux.aarch64,org.cryptomator.jfuse.mac,org.cryptomator.jfuse.win</argLine>
+                    <argLine>@{surefire.jacoco.args} -javaagent:${net.bytebuddy:byte-buddy-agent:jar}</argLine>
                 </configuration>
             </plugin>
             <plugin>
